Fix Publication section size on mobile

--- a/static/responsive.css
+++ b/static/responsive.css
@@ -32,7 +32,7 @@
 	}
 
 	#my-papers {
-		height: 250px;
+		height: 285px;
 	}
 
 	#my-courses {
